Refactor to vtkImageAdapter
Remove all the vtk example code, and only keep a
vtkGenericOpenGLRenderWindow as member of the adapter.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -2,10 +2,10 @@ cmake_minimum_required(VERSION 3.6)
 project(imgui-vtk)
 
 add_subdirectory(imgui)
-add_executable(imgui-vtk main.cpp vtk.cpp)
+add_executable(imgui-vtk main.cpp vtkImguiAdapter.cpp)
 
 
-find_package(VTK REQUIRED)
+find_package(VTK REQUIRED CONFIG)
 include(${VTK_USE_FILE})
 
 target_link_libraries(
