--- a/imgui/CMakeLists.txt
+++ b/imgui/CMakeLists.txt
@@ -4,13 +4,8 @@ set(imgui_sources
         imgui/imgui_draw.cpp
         imgui/imgui_demo.cpp
         imgui/examples/imgui_impl_opengl3.cpp
+        imgui/examples/imgui_impl_sdl.cpp
         )
-if(vtkImguiAdapter_USE_GLFW)
-  list(APPEND imgui_sources imgui/examples/imgui_impl_glfw.cpp)
-endif()
-if(vtkImguiAdapter_USE_SDL)
-  list(APPEND imgui_sources imgui/examples/imgui_impl_sdl.cpp)
-endif()
 set(imgui_headers_common
         imgui/imconfig.h
         imgui/imgui.h
@@ -22,22 +17,14 @@ set(imgui_headers_common
 set(imgui_headers_opengl
         imgui/examples/imgui_impl_opengl3.h
         )
-set(imgui_headers_glfw_glfw
-        imgui/examples/imgui_impl_glfw.h
-        )
 set(imgui_headers_glfw_sdl
         imgui/examples/imgui_impl_sdl.h
         )
 set(imgui_headers_all
     ${imgui_headers_common}
     ${imgui_headers_opengl}
+    ${imgui_headers_sdl}
     )
-if(vtkImguiAdapter_USE_GLFW)
-  list(APPEND imgui_headers_all ${imgui_headers_glfw})
-endif()
-if(vtkImguiAdapter_USE_SDL)
-  list(APPEND imgui_headers_all ${imgui_headers_sdl})
-endif()
 
 if (APPLE)
     find_library(COCOA_LIBRARY Cocoa)
@@ -46,31 +33,21 @@ if (APPLE)
     find_library(COREVIDEO_LIBRARY CoreVideo)
     set(EXTRA_LIBS ${COCOA_LIBRARY} ${OpenGL_LIBRARY} ${IOKIT_LIBRARY} ${COREVIDEO_LIBRARY})
 endif (APPLE)
-# glfw
-# Provide glfw3_DIR
-if(vtkImguiAdapter_USE_GLFW)
-  find_package(glfw3 CONFIG REQUIRED)
+
+if(NOT _vtk_supports_sdl2)
+  find_package(SDL2 CONFIG REQUIRED)
+  find_package(GLEW REQUIRED)
 endif()
-if(vtkImguiAdapter_USE_SDL)
-    if(NOT _vtk_supports_sdl2)
-      find_package(SDL2 CONFIG REQUIRED)
-      find_package(GLEW REQUIRED)
-    endif()
-endif()
+
 # opengl
 find_package(OpenGL REQUIRED)
 
 add_library(imgui-vtk ${imgui_sources})
 add_library(vtkImguiAdapter::imgui-vtk ALIAS imgui-vtk)
 target_link_libraries(imgui-vtk PUBLIC OpenGL::GL)
-if(vtkImguiAdapter_USE_GLFW)
-  target_link_libraries(imgui-vtk PUBLIC glfw)
-endif()
-if(vtkImguiAdapter_USE_SDL)
-  if(NOT _vtk_supports_sdl2)
-    target_link_libraries(imgui-vtk PUBLIC SDL2::SDL2)
-    target_link_libraries(imgui-vtk PUBLIC GLEW::GLEW)
-  endif()
+if(NOT _vtk_supports_sdl2)
+  target_link_libraries(imgui-vtk PUBLIC SDL2::SDL2)
+  target_link_libraries(imgui-vtk PUBLIC GLEW::GLEW)
 endif()
 target_include_directories(imgui-vtk PUBLIC
   $<BUILD_INTERFACE:${CMAKE_CURRENT_SOURCE_DIR}/imgui>
