--- a/cmake/vtkImGuiAdapterConfig.cmake.in
+++ b/cmake/vtkImGuiAdapterConfig.cmake.in
@@ -24,7 +24,7 @@ find_dependency(OpenGL REQUIRED)
 #     find_library(COREVIDEO_LIBRARY CoreVideo)
 # endif (APPLE)
 
-get_filename_component(vtkImguiAdapter_CMAKE_DIR "${CMAKE_CURRENT_LIST_FILE}" PATH)
-if(NOT TARGET vtkImguiAdapter)
-  include ("${vtkImguiAdapter_CMAKE_DIR}/vtkImguiAdapterTargets.cmake")
+get_filename_component(vtkImGuiAdapter_CMAKE_DIR "${CMAKE_CURRENT_LIST_FILE}" PATH)
+if(NOT TARGET vtkImGuiAdapter)
+  include ("${vtkImGuiAdapter_CMAKE_DIR}/vtkImGuiAdapterTargets.cmake")
 endif()
